# sakemas-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix
.agents/skills/: INDEX.md
.agents/skills/adr-review/: SKILL.md
.agents/skills/design-sync/: SKILL.md
.agents/skills/document-date-accuracy/: SKILL.md
.agents/skills/rust-workflow/: SKILL.md
.github/workflows/: deploy.yml
design/adr/: 0001-runtime-environment.md  0002-database-selection.md  0003-secrets-management.md  0004-containerization.md  0005-songbird.md  0006-nixos-deployment.md  0007-northflank-sandbox-feasibility.md  README.md  template.md
docs/: deployment-nixos.md  deployment-northflank.md  deployment.md
migrations/: 20240219092723_vc_announcement.sql  20240220063537_add_usage_count_to_announcements.sql  20240223091954_add_author_id_to_announcements.sql  20240224063836_create_calendar_tables.sql  20240303072633_create_twitter_token.sql
nix/nixos-modules/: sakemas-bot.nix
src/: commands.rs  event_handler.rs  main.rs  scheduled_events.rs  utils.rs
src/commands/: idol.rs  twitter.rs  vc_announcement.rs  voice.rs
src/event_handler/: schedule.rs
src/event_handler/guild/: member.rs
src/event_handler/message/: tweet.rs
src/utils/: channel.rs  command.rs  emoji.rs  member.rs  reaction.rs  secret.rs  serde.rs  twitter.rs
src/utils/twitter/: access_token.rs  media.rs
src/utils/twitter/media/: append.rs  finalize.rs  init.rs  upload_from_bytes.rs
