[package]
name = "sakemas-bot"
version = "0.0.6"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cron = "0.15"
dotenvy = "0.15"
futures = "0.3.31"
poise = { version = "0.6.1", features = ["collector"] }
reqwest = "0.11"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
songbird = { version = "0.4", features = ["builtin-queue"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1.41"
twapi-v2 = "0.20"
twitter-text = "0.2.0"
twitter_text_config = "0.2.0"
