[package]
name = "sakemas-bot"
version = "0.0.6"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cron = "0.17"
dotenvy = "0.15"
futures = "0.3"
poise = { version = "0.6.2", features = ["collector"] }
reqwest = "0.12"
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
songbird = { version = "0.6.0", features = ["builtin-queue"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "macros", "postgres"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
twapi-v2 = "0.27"
twitter-text = "0.2"
twitter_text_config = "0.2"
